<resources>
    <string name="app_name">5 измерение</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_register_text">Регистрация</string>
    <string name="email_text">Email</string>
    <string name="password_text">Пароль</string>
    <string name="name_text">Имя</string>
    <string name="surname_text">Фамилия</string>
    <string name="title_authorization_text">Вход</string>
    <string name="enter_text">Вход</string>
    <string name="previous_text">Назад</string>
    <string name="logo_text">Логотип</string>
    <string name="mail_text">Почта</string>
    <string name="enter_by_google_text">Войти через Google</string>
    <string name="question_no_account_text">Нет аккаунта?</string>
    <string name="action_register_text">Зарегистрироваться</string>
    <string name="register_text">Зарегистрироваться</string>
    <string name="question_exists_account">Есть аккаунт?</string>
    <string name="action_enter">Войти</string>
    <string name="title_popular_text">Пробуди свой потенциал</string>
    <string name="test_count_practice">12 практик</string>
    <string name="title_category_text">Категории</string>
    <string name="settings_profile_text">Настройки профиля</string>
    <string name="notifications_text">Уведомления</string>
    <string name="theme_text">Тема</string>
    <string name="if_else_use_text">Условия использования</string>
    <string name="security_politics_text">Политика конфиденциальности</string>
    <string name="my_course_text">Мои курсы</string>
    <string name="category_to_time_text">По времени суток</string>
    <string name="category_child_text">Концентрация</string>
    <string name="category_resource_text">Ресурс</string>
    <string name="category_inner_dialog_text">Внутренний диалог</string>
    <string name="category_change_reality_text">Изменение реальности</string>
    <string name="money_text">Деньги</string>
    <string name="morning_text">Утро</string>
    <string name="evening_text">Вечер</string>
    <string name="course_with_task_text">Курсы с заданиями</string>
    <string name="change_reality_text">Меняющие реальность</string>
    <string name="relaxed_text">Расслабляющие</string>
    <string name="respire_text">Дыхательные</string>
    <string name="chakra_text">Чакры</string>
    <string name="new_content_text">Новый контент</string>
    <string name="point_text">•</string>
    <string name="start_text">Начать</string>
    <string name="description_all_text">Этот курс поможет стать лучше. Здесь может быть любой текст в зависимости необходимо это или нет.</string>
    <string name="lesson_one_text">Урок 1</string>
    <string name="meet_text">Знакомство</string>
    <string name="time_text">01:05</string>
    <string name="name_app_text">Пятое измерение</string>
    <string name="next_text">Далее</string>
    <string name="welcome_text">Добро пожаловать</string>
    <string name="page_one_text">Здесь ты найдешь практики способные изменить твою реальность</string>
    <string name="page_two_text">Соприкоснись с великой силой своего разума. Пробуди свой потенциал. Постигни глубину самого себя.</string>
    <string name="page_three_text">Это твой карманный помощник в любой непонятной жизненной ситуации.</string>
    <string name="test_date_text">Январь 2022</string>
    <string name="name_practice_title">Название практики</string>
    <string name="text_01">01</string>
    <string name="tuesday_text">вт</string>
    <string name="dot_dot_text">..</string>
    <string name="auth_text">Авторизоваться</string>
    <string name="update_content_text_title">Обновление контента!</string>
    <string name="notification_text">Текст уведомления</string>
    <string name="subscribe_text">Оформить подписку</string>
    <string name="logout_text">Выйти из аккаунта</string>
    <string name="subscribes_text">Подписки</string>
    <string name="access_for_all_materials">Доступ ко всем материалам</string>
    <string name="payment_text">Оплатить</string>
    <string name="text_settings">Настройки</string>
    <string name="text_save">Сохранить</string>
    <string name="text_retry_password">Повтор пароля</string>
    <string name="text_policy">Политика в отношении обработки персональных данных</string>
    <string name="text_policy_2">Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных Григорьева Кристина Игоревна (далее – Оператор).</string>
    <string name="text_policy_1">1. Общие положения</string>
    <string name="text_policy_3">1. Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.\n2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта https://kristinakaruna.ru/5measurement</string>
    <string name="text_policy_4">2. Основные понятия, используемые в Политике</string>
    <string name="text_policy_5">1. Автоматизированная обработка персональных данных – обработка персональных данных с помощью средств вычислительной техники; \n2. Блокирование персональных данных – временное прекращение обработки персональных данных (за исключением случаев, если обработка необходима для уточнения персональных данных \n3. Веб-сайт – совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных, обеспечивающих их доступность в сети интернет по сетевому адресу ; \n4. Информационная система персональных данных — совокупность содержащихся в базах данных персональных данных, и обеспечивающих их обработку информационных технологий и технических средств; \n5. Обезличивание персональных данных — действия, в результате которых невозможно определить без использования дополнительной информации принадлежность персональных данных конкретному \n6. Пользователю или иному субъекту персональных данных; \n7. Обработка персональных данных – любое действие (операция) или совокупность действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных; \n8. Оператор – государственный орган, муниципальный орган, юридическое или физическое лицо, самостоятельно или совместно с другими лицами организующие и (или) осуществляющие обработку персональных данных, а также определяющие цели обработки персональных данных, состав персональных данных, подлежащих обработке, действия (операции), совершаемые с персональными данными; \n9. Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или определяемому Пользователю веб-сайта; \n10. Пользователь – любой посетитель веб-сайта; \n11. Предоставление персональных данных – действия, направленные на раскрытие персональных данных определенному лицу или определенному кругу лиц; \n12. Распространение персональных данных – любые действия, направленные на раскрытие персональных данных неопределенному кругу лиц (передача персональных данных) или на ознакомление с персональными данными неограниченного круга лиц, в том числе обнародование персональных данных в средствах массовой информации, размещение в информационно-телекоммуникационных сетях или предоставление доступа к персональным данным каким-либо иным способом; \n13. Трансграничная передача персональных данных – передача персональных данных на территорию иностранного государства органу власти иностранного государства, иностранному физическому или иностранному юридическому лицу; \n14. Уничтожение персональных данных – любые действия, в результате которых персональные данные уничтожаются безвозвратно с невозможностью дальнейшего восстановления содержания персональных данных в информационной системе персональных данных и (или) результате которых уничтожаются материальные носители персональных данных.</string>
    <string name="text_policy_6">3. Оператор может обрабатывать следующие персональные данные Пользователя</string>
    <string name="text_policy_8">1. Фамилия, имя, отчество; \n2. Электронный адрес; \n3. Номера телефонов; \n4. Год, месяц, дата и место рождения; \n5. Фотографии; \n6. Также на сайте происходит сбор и обработка обезличенных данных о посетителях (в т.ч. файлов «cookie») с помощью сервисов интернет-статистики (Яндекс Метрика и Гугл Аналитика и других). Вышеперечисленные данные далее по тексту Политики объединены общим понятием Персональные данные.</string>
    <string name="text_policy_9">4. Цели обработки персональных данных</string>
    <string name="text_policy_10">1. Цель обработки персональных данных Пользователя — информирование Пользователя посредством отправки электронных писем; заключение, исполнение и прекращение гражданско-правовых договоров; предоставление доступа Пользователю к сервисам, информации и/или материалам, содержащимся на веб-сайте. 2. \nТакже Оператор имеет право направлять Пользователю уведомления о новых продуктах и услугах, специальных предложениях и различных событиях. Пользователь всегда может отказаться от получения информационных сообщений, направив Оператору письмо на адрес электронной почты kristina.berdsk@mail.ru с пометкой «Отказ от уведомлениях о новых продуктах и услугах и специальных предложениях». 3. \nОбезличенные данные Пользователей, собираемые с помощью сервисов интернет-статистики, служат для сбора информации о действиях Пользователей на сайте, улучшения качества сайта и его содержания</string>
    <string name="text_policy_11">5. Правовые основания обработки персональных данных</string>
    <string name="text_policy_12">\n1. Оператор обрабатывает персональные данные Пользователя только в случае их заполнения и/или отправки Пользователем самостоятельно через специальные формы, расположенные на сайте . Заполняя соответствующие формы и/или отправляя свои персональные данные Оператору, Пользователь выражает свое согласие с данной Политикой. \n2. Оператор обрабатывает обезличенные данные о Пользователе в случае, если это разрешено в настройках браузера Пользователя (включено сохранение файлов «cookie» и использование технологии JavaScript).</string>
    <string name="text_policy_13">6. Порядок сбора, хранения, передачи и других видов обработки персональных данных</string>
    <string name="text_policy_14">Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в полном объеме требований действующего законодательства в области защиты персональных данных.</string>
</resources>