<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/idAdapter"
    android:background="@drawable/vector_calendar_black_item"
    android:layout_marginEnd="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutItemAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewNumberDay"
                style="@style/CustomLowBlackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_serif_pro"
                android:gravity="center_horizontal"
                android:text="@string/text_01" />

            <TextView
                android:id="@+id/textViewStringDay"
                style="@style/CustomLowBlackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tuesday_text" />

            <TextView
                android:id="@+id/textViewCountNew"
                style="@style/CustomLowBlackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dot_dot_text" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>