<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".containers.auth.fragments.LoginFragment">

    <com.game.app.components.HideKeyboardScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/includeHeaderApp"
                layout="@layout/layout_header_app"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/includeHeaderApp">

                <TextView
                    android:id="@+id/textViewTitleLogin"
                    style="@style/TitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_authorization_text" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="329dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/pt_serif"
                        android:text="@string/mail_text"
                        android:textColor="@color/white_text_color" />

                    <EditText
                        android:id="@+id/editTextEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:autofillHints="@string/email_text"
                        android:background="@drawable/shape_rect_white_round"
                        android:ems="10"
                        android:fontFamily="@font/pt_serif"
                        android:hint="@string/email_text"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textColorHint="#90A4AE"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/pt_serif"
                        android:text="@string/password_text"
                        android:textColor="@color/white_text_color" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPasswordLogin"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:autofillHints="@string/password_text"
                            android:background="@drawable/shape_rect_dark_round"
                            android:ems="10"
                            android:fontFamily="@font/pt_serif"
                            android:hint="@string/password_text"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textColorHint="#90A4AE"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                            tools:ignore="DuplicateSpeakableTextCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/buttonEnterLogin"
                        style="@style/ButtonCoffeeStyle"
                        android:layout_width="match_parent"
                        android:layout_marginTop="32dp"
                        android:text="@string/enter_text"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Button
                        android:id="@+id/buttonRegisterLogin"
                        style="@style/ButtonGoogleLogin"
                        android:layout_width="match_parent"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/pt_serif"
                        android:text="@string/enter_by_google_text"
                        android:textAllCaps="false"
                        android:textColor="@color/white_text_color"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/linearLayoutLinkToRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/pt_serif"
                            android:text="@string/question_no_account_text"
                            android:textColor="@color/coffee_color" />

                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/pt_serif"
                            android:text="@string/action_register_text"
                            android:textColor="@color/white_text_color" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Центральный Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.game.app.components.HideKeyboardScrollView>
</RelativeLayout>